--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">LavishDemo</string>
     <string name="portfolio_title">Portfolio</string>
     <string name="toggle_theme">Toggle Theme</string>
-    <string name="connectivity_online">Back online</string>
+    <string name="connectivity_online">Online</string>
     <string name="connectivity_offline">No internet connection</string>
     <string name="profit_loss_label">Profit &amp; Loss*</string>
     <string name="portfolio_summary_title">Portfolio Summary</string>
